.translator/k8s/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libretranslate
spec:
  selector:
    matchLabels:
      app: libretranslate
  template:
    metadata:
      labels:
        app: libretranslate
    spec:
      containers:
      - name: libretranslate
        image: libretranslate/libretranslate:latest
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          failureThreshold: 1
          periodSeconds: 30
        startupProbe:
          httpGet:
            path: /
            port: 5000
          failureThreshold: 10
          periodSeconds: 15
          timeoutSeconds: 10
