.translator/k8s/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: libretranslate-svc
spec:
  selector:
    app: libretranslate
  ports:
  - port: 5000
    targetPort: 5000
