.translator/k8s/base/ingress-translator.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-translator
  labels:
    app: libretranslate
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: translator-basic-auth-middleware@kubernetescrd
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: libretranslate-svc
                port:
                  number: 5000
